[package]
name = "Benny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "game-server"
path = "src/server.rs"

[[bin]]
name = "game-client"
path = "src/client.rs"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.10.2"