[package]
name = "onprem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "onprem-server"
path = "src/main.rs"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tonic = "0.11.0"
walkdir = "2.4.0"
yield-return = "0.1.0"


[build-dependencies]
tonic-build = "0.11.0"
